# Player

./: .gitignore  LICENSE  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/zh_CN/element/: string.json
hvigor/: cangjie-build-support-3.1.122.tgz  hvigor-config.json5
ijkplayer/: .gitignore  BuildProfile.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
ijkplayer/src/main/cpp/: CMakeLists.txt
ijkplayer/src/main/cpp/ijkplayer/: CMakeLists.txt
ijkplayer/src/main/cpp/ijksdl/: CMakeLists.txt
ijkplayer/src/main/cpp/napi/: ijkplayer_napi.cpp
ijkplayer/src/main/cpp/proxy/: ijkplayer_napi_proxy.cpp
licenses/: ass-compiler.license
player/: build-profile.json5  oh-package-lock.json5  oh-package.json5
player/src/main/: module.json5
player/src/main/cangjie/: ability_stage.cj  cjpm.toml  index.cj  main_ability.cj
player/src/main/cangjie/network/: http.cj  webdav.cj
player/src/main/cangjie/util/: collection.cj
player/src/main/cpp/: CMakeLists.txt  napi_init.cpp
player/src/main/cpp/metadata/: metadata_napi.cpp  metadata_napi.h  metadata_napi_init.cpp
player/src/main/cpp/subtitle/: png_utils.cpp  png_utils.h  subtitle_napi.cpp  subtitle_napi.h  subtitle_napi_init.cpp
player/src/main/cpp/types/libplayer/: index.d.ts  oh-package.json5
player/src/main/cpp/types/librohy_metadata/: index.d.ts  oh-package.json5
player/src/main/cpp/types/librohy_subtitle/: index.d.ts  oh-package.json5
player/src/main/cpp/types/subtitle/: subtitle_renderer.cpp  subtitle_renderer.h
player/src/main/cpp/utils/: napi_utils.cpp  napi_utils.h
player/src/main/ets/ability/: PlayerAbility.ets  VideoAbility.ets
player/src/main/ets/application/: RohyPlayerAbilityStage.ets
player/src/main/ets/backupability/: PlayerBackupAbility.ets
player/src/main/ets/bridge/: index.ets
player/src/main/ets/bridge/network/: webdav.ets
player/src/main/ets/common/constants/: CommonConstants.ets  StyleConstants.ets
player/src/main/ets/database/: DatabaseManager.ets  FontLibraryDatabase.ets  SubtitleLibraryDatabase.ets  VideoLibraryDatabase.ets  WebDAVDatabase.ets
player/src/main/ets/entity/: Arrays.ets  AudioEntity.ets  FontEntity.ets  Headers.ets  SubtitleEntity.ets  VideoEntity.ets  WebDAVEntity.ets
player/src/main/ets/lib/ass_compiler/: README.md  index.d.ts  index.js  tags.d.ts
player/src/main/ets/lib/danmaku/: BiliDanmukuParser.ets
player/src/main/ets/lib/srt/: srt.ets
player/src/main/ets/lib/webdav_client/: WebDAVClient.ets  WebDAVFileSystem.ets
player/src/main/ets/log/: Rlog.ets
player/src/main/ets/napi/: MetadataNapi.ets
player/src/main/ets/pages/: Index.ets  VideoIndex.ets
player/src/main/ets/pages/components/: DraggableCustomization.ets  Overlays.ets  SettingsPage.ets  VirtualFilePicker.ets
player/src/main/ets/pages/debug/: DebugPage.ets
player/src/main/ets/pages/information/: ServiceRules.ets
player/src/main/ets/pages/player/: AVVideoPlayer.ets  IjkVideoPlayer.ets  NativePlayerPage.ets
player/src/main/ets/pages/rohyplayer/: HomeScreen.ets  RohyPlayerHome.ets
player/src/main/ets/pages/rohyplayer/audiolibrary/: AudioLibraryPage.ets
player/src/main/ets/pages/rohyplayer/more/: FontManagementGroup.ets  MorePage.ets  WebDAVManagementGroup.ets
player/src/main/ets/pages/rohyplayer/playlist/: PlaylistPage.ets
player/src/main/ets/pages/rohyplayer/videolibrary/: GridView.ets  ListView.ets  VideoLibraryPage.ets
player/src/main/ets/pages/rohyplayer/videolibrary/category/: CategoryView.ets
player/src/main/ets/pages/settings/: SettingsSheetView.ets  ToolbarCustomizer.ets  VideoLibrarySettingsPage.ets
player/src/main/ets/pages/settings/debug/: DebugPage.ets
player/src/main/ets/pages/settings/information/: AboutPage.ets  Privacy.ets  ServiceRules.ets
player/src/main/ets/pages/settings/log/: LogExportPage.ets
player/src/main/ets/pages/settings/pages/: MoreSettingsPage.ets  VideoLibrarySettingsPage.ets
player/src/main/ets/pages/statusbar/: StatusBar.ets
player/src/main/ets/pages/statusbar/info/: BatteryInfo.ets  BlueToothBatteryInfo.ets  TimeInfo.ets
player/src/main/ets/pages/subtitle/: AssSubtitleView.ets  SrtSubtitleView.ets
player/src/main/ets/pages/system/: BatterySymbol.ets
player/src/main/ets/sendable/: SystemBasicInfo.ets
player/src/main/ets/util/: AlertUtil.ets  ArrayUtil.ets  AsyncUtil.ets  CollectionUtil.ets  ColorUtil.ets  ContinueUtil.ets  DatabaseUtil.ets  HashUtil.ets  IconUtil.ets  ImageUtil.ets  MathUtil.ets  PermissionUtils.ets  PickerUtil.ets  PlayerUtil.ets  StringUtil.ets  TestUtil.ets  TimeUtil.ets  ToolbarCustomizationUtil.ets
player/src/main/resources/base/element/: color.json  float.json  string.json
player/src/main/resources/base/media/: filemanager_icon.json  photos_icon.json  webdav_icon.json
player/src/main/resources/base/profile/: main_pages.json
player/src/main/resources/dark/element/: color.json
player/src/main/resources/rawfile/: privacy.md
player/src/main/resources/zh_CN/element/: string.json
player/src/ohosTest/: module.json5
